# mcp_literature_eval

./: .copier-answers.yml  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  METACODER_FIXES.md  README.md  TEST_CASES.md  index.html  justfile  metacoder_error_handling.patch  metacoder_goose_error_handling.patch  metacoder_goose_extension_fix.patch  mkdocs.yml  pyproject.toml  run_claude_eval.sh  run_gemini_eval.sh  run_goose_claude_eval.sh  run_goose_eval.sh  run_goose_gpt4o_mini_eval.sh  run_goose_gpt5_eval.sh  sitemap.xml
.github/workflows/: ai.yml  main.yaml
about/: index.html
docs/: about.md  index.md
examples/: README.md
notebook/: experiment_1_cross_agent_analysis.ipynb  experiment_1_failure_analysis.ipynb  experiment_1_how_to_run.ipynb  experiment_1_run_evaluations.ipynb  experiment_2_cross_model_analysis.ipynb  experiment_2_run_evaluations.ipynb  metacoder_fixes_documentation.ipynb  visualize_results_yaml.ipynb  visualize_results_yaml_executed.ipynb
notes/: CBORG_CONFIGURATION.md  DISABLE_FILESYSTEM_CHEATING_PLAN.md  EXPERIMENT_1_RESULTS.md  EXPERIMENT_1_STATUS.md  EXPERIMENT_2_CROSS_MODEL.md  GEMINI_CLI_YOLO_FIX.md  GEMINI_LOW_PERFORMANCE_ANALYSIS.md  GOOSE_CLAUDE_CREDIT_LIMIT_ISSUE.md  GOOSE_MCP_FIX.md  NOTEBOOKS_README.md  PROJECT_STATUS_20251103.md  README.md  REFACTORING_PLAN.md  custom_geval_implementation_plan.md  evaluation_run_log_20251125.md  evaluation_run_metadata_2025-11-25.yaml  evaluation_run_metadata_template.yaml  experiment_1_cross_agent_comparison.md  experiment_2_cross_model_evaluation.md  experiment_2_versions.yaml  run_codex_eval.sh  run_codex_gpt5.sh  run_gemini_test.sh  test_codex.sh  test_goose.sh  test_goose_extension_fix.sh
project/: README.md  literature_mcp_encoding_test.yaml  literature_mcp_eval_config.yaml  literature_mcp_eval_config_NBK.yaml  literature_mcp_eval_config_claude.yaml  literature_mcp_eval_config_codex.yaml  literature_mcp_eval_config_gemini.yaml  literature_mcp_eval_config_gemini_test.yaml  literature_mcp_eval_config_goose_claude.yaml  literature_mcp_eval_config_goose_gpt4o.yaml  literature_mcp_eval_config_goose_gpt4o_mini.yaml  literature_mcp_eval_config_goose_gpt5.yaml  literature_mcp_eval_config_test.yaml  test_cases.yaml  test_cborg_goose_claude.yaml
results/: mcp_literature_eval_results_20250902.yaml
search/: search_index.json
tests/: __init__.py  conftest.py  test_goose.py  test_simple.py
(+38 files in other folders)
